# SAM-Solution

./: .gitignore  README.md  run_tests.php
deployment/: Makefile
deployment/admin_client_build/: CMakeLists.txt
deployment/server_build/: CMakeLists.txt
deployment/user_client_build/: CMakeLists.txt
source/Tests/ANetworkInstruction/: ANetworkInstruction.pro  TestANetworkInstruction.cpp
source/admin_client/: main.cpp
source/clients/admin/: Makefile  admin.pro  main.qml  qml.qrc
source/clients/common/: AInstruction.cpp  AInstruction.hpp  AInstructionModel.cpp  AInstructionModel.hpp  INetworkClientManager.hpp  InstructionModel.cpp  InstructionModel.hpp  InstructionParameterModel.cpp  InstructionParameterModel.hpp  NetworkClientManager.cpp  NetworkClientManager.hpp  common.pro  moc_NetworkClientManager.cpp
source/clients/user/: main.qml  user.pro
source/common/: FileManagerUtils.cpp  FileManagerUtils.hpp  FileObject.cpp  FileObject.hpp  HelloWorld.hpp
source/common/Tests/: Makefile  TestFileManagerUtils.cpp  TestFileManagerUtils.moc  Tests  Tests.pro  sam.conf
source/common/UnitTests/: UnitTests.pro
source/common/others/: struct_packed.h
source/common/qt_custom_extensions/: _QFile.cpp  _QFile.hpp  _QTcpServer.cpp  _QTcpServer.hpp
source/common/qt_extensions/: _QFile.cpp
source/common/trunk/: InstructionFactoryUtils.cpp  InstructionFactoryUtils.hpp
source/server/: main.cpp  server.crt  server.key  server.pro
source/server/scripts/: gen_tls_files.sh
source/tests/ANetworkInstruction/: TestANetworkInstruction.cpp
source/tests/TestAFunctionalitiesManager/: AMainController.hpp  BasicFunctionalitiesManager.cpp  BasicFunctionalitiesManager.hpp  BasicMainController.cpp  BasicMainController.hpp  MainController.cpp  MainController.hpp  TestAFunctionalitiesManager.cpp  TestAFunctionalitiesManager.hpp  TestAFunctionalitiesManager.pro
source/tests/TestAFunctionality/: BasicAFunctionality.cpp  BasicAFunctionality.hpp  BasicAfunctionality.cpp  TestAFunctionality.cpp  TestAFunctionality.hpp  TestAFunctionality.pro
source/tests/TestAInstruction/: FooBarInstruction.cpp  FooBarInstruction.hpp  TestAInstruction.cpp  TestAInstruction.pro
source/user_client/: main.cpp
(+198 files in other folders)
